updated stylesheet for design issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -187,7 +187,7 @@ body {
   font-weight: var(--fw-700);
   text-align: center;
   padding: 0.75rem 0;
-  letter-spacing: -0.1rem;
+  letter-spacing: -0.1px;
   line-height: 2;
 }
 
@@ -309,7 +309,7 @@ body {
 
 .test__content {
   max-width: 21.4375rem;
-  padding: 2rem 1.9375rempx 2rem;
+  padding: 2rem 1.9375rem 2rem;
   margin-inline: auto;
 }
 
